# supersonic

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile.in  README  README.md  deps.sh  docker.build.sh  docker.run.sh
docker/0-dev-0-supersonic/: Dockerfile.in  docker.build.sh
supersonic/base/exception/: exception.h  exception_macros.h  result_test.cc
supersonic/base/infrastructure/: bit_pointers.cc  bit_pointers.h  bit_pointers_test.cc  block.cc  block.h  block_test.cc  copy_column.cc  copy_column.h  copy_column_test.cc  projector.cc  projector.h  projector_test.cc  tuple_schema.cc  tuple_schema.h  tuple_schema_test.cc  types.h  types_infrastructure.cc  types_infrastructure.h  types_infrastructure_test.cc  variant_pointer.h  view_copier.cc  view_copier_test.cc
supersonic/base/memory/: arena.cc  arena.h  memory.cc  memory.h  memory_test.cc
supersonic/cursor/base/: cursor.h  cursor_transformer.h  lookup_index.h  lookup_index_test.cc  operation.h
supersonic/cursor/core/: aggregate.h  aggregate_clusters.cc  aggregate_groups.cc  aggregate_groups_test.cc  aggregate_scalar.cc  aggregator.cc  aggregator.h  benchmarks.cc  benchmarks.h  coalesce.cc  coalesce_test.cc  column_aggregator.cc  column_aggregator_test.cc  compute.cc  filter.cc  filter_test.cc  foreign_filter.cc  generate.cc  hash_join.cc  hash_join.h  hash_join_test.cc  hybrid_group_utils.cc  limit.cc  limit_test.cc  merge_union_all.cc  ownership_taker.h  project.cc  rowid_merge_join.cc  scan_view.cc  sort.cc  sort.h  sort_test.cc  specification_builder.h  splitter.h  splitter_test.cc  spy.cc  spy.h
supersonic/cursor/infrastructure/: basic_cursor.h  basic_operation.h  basic_operation_test.cc  file_io.cc  history_transformer.h  iterators.h  iterators_test.cc  ordering.h  row.h  row_copier.h  row_copier_test.cc  row_hash_set.cc  row_hash_set.h  row_hash_set_test.cc  table.cc  table.h  value_ref.h  view_cursor.cc  writer.h  writer_test.cc
supersonic/expression/base/: expression.cc  expression.h
supersonic/expression/core/: comparison_bound_expressions.cc  comparison_bound_expressions_test.cc  comparison_expressions.cc  date_bound_expressions.cc  date_evaluators.cc  date_expressions.cc  date_expressions_test.cc  elementary_bound_expressions.cc  elementary_expressions.cc  math_evaluators.h  projecting_bound_expressions.cc  projecting_expressions.cc  projecting_expressions.h  stateful_bound_expressions.cc  string_bound_expressions.cc  string_bound_expressions_test.cc  string_evaluators.h  string_expressions.cc  string_expressions_test.cc
supersonic/expression/infrastructure/: basic_bound_expression.cc  basic_bound_expression.h  basic_bound_expression_test.cc  basic_expressions.cc  basic_expressions.h  bound_expression_creators.h  elementary_bound_const_expressions.h  elementary_const_expressions.h  expression_utils_test.cc  terminal_bound_expressions.cc  terminal_expressions.cc
supersonic/expression/templated/: abstract_bound_expressions.h  abstract_expressions.h  bound_expression_factory.cc  bound_expression_factory.h  cast_bound_expression.cc  cast_expression.cc
supersonic/expression/vector/: binary_column_computers.h  binary_column_computers_test.cc  column_validity_checkers.h  expression_evaluators.h  ternary_column_computers.h  ternary_column_computers_test.cc  unary_column_computers.h  unary_column_computers_test.cc  vector_primitives.h  vector_primitives_test.cc
supersonic/serialization/: build_expression_from_proto.cc
supersonic/testing/: comparable_view.cc
supersonic/utils/: algorithm.h  bits.cc  bits.h  casts.h  charmap.h  demangle.cc  endian.h  file.cc  file.h  file_util.cc  file_util.h  fixedarray.h  int128.h  integral_types.h  iterator_adaptors.h  linked_ptr.h  map_util.h  mathlimits.h  port.h  random.cc  random.h  stl_util.h  stringprintf.cc  strtoint.h  template_util.h  timer.h  walltime.cc  walltime.h
supersonic/utils/exception/: coowned_pointer.h  coowned_pointer_test.cc  failureor.h  failureor_test.cc
supersonic/utils/strings/: ascii_ctype.cc  case.h  escaping.cc  escaping.h  fastmem.h  join.h  join_internal.h  memutil.cc  numbers.cc  split.cc  split.h  split_internal.h  stringpiece.cc  stringpiece.h  strip.cc  strip.h  substitute.cc  substitute.h  util.cc  util.h
supersonic_memory/: MetaBean.h  SupersonicMemory.h  hash.h
supersonic_memory_test/: SupersonicMemoryTest.cc  googletest  mainTest.cc
supersonic_quicksave/: CursorIterator.h  SupersonicCast.h
supersonic_quicksave_generated/qsgen/bean/: MetaBean.h
supersonic_quicksave_test/: SupersonicMemoryTest.cc
supersonic_testing/supersonic/testing/: block_builder.cc  row.cc  (+17 more)
test_utils/: supersonic_test_main.cc
(+25 files in other folders)
